css/main.css
/************************
GENERAL
*************************/

ul {
    list-style: none;
}

a {
    text-decoration: none;
}

body {
    font-family: 'Lato', sans-serif;
}

#wrapper {
    max-width: 940px;
    clear: both;
    margin: 0 auto;
    padding: 0 5%;
}

img {
    max-width: 100%;
}

h1 {
    font-size: 1.75em;
    font-weight: 700;
}

h2 {
    font-size: 1em;
    font-weight: 400;
    margin: -5px 0 0 0;
}

/************************
HEADER
*************************/

header {
    float: left;
    width: 100%;
    margin: 0 0 30px 0;
    padding: 5px 0 0 0;
}

#logo {
    text-align: center;
}

/************************
NAVIGATION
*************************/

nav li {
    display: inline-block;
}

nav {
    text-align: center;
    padding: 10px;
    margin: 30px 0 0;
}

nav a {
    padding: 15px 10px;
    font-weight: 700;
}

/************************
FOOTER
*************************/

footer {
    clear:both;
    text-align: center;
    color: #ccc;
    font-size: .75em;
}

.social-icon {
    width: 20px;
    height: 20px;
    margin: 0px;
}

/************************
PAGE: PORTFOLIO
*************************/

#gallery li {
    width: 45%;
    margin: 2.5%;
    float: left;
    background-color: #f5f5f5;
    color: #bdc3c7;
}

#gallery li p {
    padding: 5%;
    font-size: .75em;
    margin: 0px;
}

/************************
PAGE: CONTACT
*************************/

/************************
PAGE: ABOUT
*************************/

/************************
COLORS
*************************/

body {
    background-color: #fff;
    color: #999;
}

header {
    background: #6ab47b;
}

a {
    color: #6ab74b;
}

h1,
h2 {
    color: #fff;
}

nav a {
    color: #fff;
}

/* color of the background for mobile*/

nav {
    background: #599a68;   
}

nav a.selected, 
nav a:hover {
    color: #32673f;
}

